--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-image: url(webBackground.png);
+    background-image: url(/webBackground.png);
     background-size: 100%;
     background-repeat: space;
     margin-top: 50px;
