--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    color: white;
 }
 
 body {
@@ -17,15 +18,13 @@ body {
     top: 0;
     width: 100%;
     color: white;
-    padding: 1rem;
-    z-index: 1000; /* Keeps navbar above other content */
+    padding: 1.5rem;
 }
 
 .navbar ul {
     list-style-type: none;
     display: flex;
     justify-content: space-around;
-    transform: skew(-20deg);
 }
 
 .navbar a {
@@ -35,12 +34,12 @@ body {
     border-radius: 2px;
     transition: 0.5s ease all;
     border: solid;
-    border-width: 2px;
+    border-width: 4px;
 }
 
 .navbar a:hover {
     background-color: rgba(0, 0, 0, 0.1);
-    border-radius: 3px 20px;
+    border-radius: 20px;
     color: rgba(10, 10, 10, 0.6);
     transition: background-color 0.5s ease;
     transition: border-radius 0.5s ease;
@@ -52,8 +51,8 @@ body {
 }
 
 .mainContent {
-    margin-top: 10%;
-    padding: 5px;
+    margin: 15% 2% 0%;
+    padding: 10px;
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 10px;
     display: grid;
