--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-image: url(/webBackground.png);
+    background-image: url(resources/webBackground.png);
     background-size: 100%;
     background-repeat: space;
     margin-top: 50px;
