--- a/style.css
+++ b/style.css
@@ -2,13 +2,20 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    font-family: "Helvetica", "Sans-serif";
     color: white;
 }
 
+:root {
+    --mainColor: #D7CFC2;
+    --black: #0D0D0D;
+    --backgroundGradient: linear-gradient(to bottom right, #D9C9BA, #F2E3D5);
+}
+
 body {
-    background-image: url(resources/webBackground.png);
+    background-image: var(--backgroundGradient);
     background-size: 100%;
+    min-height: 100vh;
     background-repeat: space;
     margin-top: 50px;
 }
@@ -18,11 +25,11 @@ p {
 }
 
 .navbar {
-    position: fixed;
+    position: sticky;
     top: 0;
     width: 100%;
     color: white;
-    padding: 1.5rem;
+    padding: 1rem;
 }
 
 .navbar ul {
@@ -35,27 +42,23 @@ p {
     color: white;
     text-decoration: none;
     padding: 0.5rem 1rem;
-    border-radius: 2px;
     transition: 0.5s ease all;
-    border: solid;
-    border-width: 4px;
 }
 
 .navbar a:hover {
     background-color: rgba(0, 0, 0, 0.1);
     border-radius: 20px;
-    color: rgba(10, 10, 10, 0.6);
+    color: #F22738;
     transition: background-color 0.5s ease;
-    transition: border-radius 0.5s ease;
 }
 
 .thispage {
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: #F22738;
     border-radius: 20px;
 }
 
 .mainContent {
-    margin: 15% 2% 0%;
+    margin: 5% 2% 0%;
     padding: 10px;
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 10px;
