--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ h3 {
 
 /*NAVBAR*/
 .navbar {
-    position: sticky;
+    position: static;
     top: 0;
     width: 100%;
     color: white;
@@ -71,7 +71,7 @@ h3 {
 .navbar a {
     color: white;
     text-decoration: none;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 2rem;
     transition: 0.5s ease all;
 }
 
@@ -94,7 +94,7 @@ h3 {
 .contentBackground {
     background-image: var(--blackGradient);
     border-radius: 10px;
-    margin: 5% 2% 0%;
+    margin: 2% 2% 0%;
     box-shadow: 0px 0px 25px var(--black);
 }
 
@@ -190,7 +190,9 @@ h3 {
     display: none;
     border-top: none;
     background-color: var(--doc);
-    border-radius: 0 1em 0 0;
+    border-radius: 0 1em 1em 1em;
+    margin-bottom: 1vw;
+    padding-bottom: 2vh;
 }
 
 .tab {
@@ -199,6 +201,12 @@ h3 {
 
 .activeP {
     box-shadow: none;
+}
+
+.pdf {
+    margin-left: 20%;
+    margin-right: 20%;
+    width: 60%;
 }
 
 .project p {
