--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 }
 
 body {
-    background-image: url(/resources/gradientbackground2rotated.png);
+    background-color: var(--mainColor);
     background-size: auto 100%;
     min-height: 100vh;
     background-repeat: space;
@@ -205,21 +205,10 @@ h3 {
     box-shadow: none;
 }
 
-.pdf {
-    margin-left: 20%;
-    margin-right: 20%;
-    width: 60%;
-}
-
-.errorPDF {
-    color: green; 
-    font-size: larger; 
-    color: white; 
-    background-color: #1B6FFF; 
-    border-radius: 1vh;
-    padding: 1vh;
-    margin-left: 25%;
-    display: hidden;
+#SummatePDF {
+    width: 90%;
+    height: 50%;
+    padding: 1%;
 }
 
 .project p {
@@ -279,11 +268,9 @@ h3 {
         padding: 1% 6%;
     }
 
-    .pdf {
-        margin-left: 10%;
-        margin-right: 10%;
-        width: 80%;
-        height: 200;
+    #SummatePDF {
+        width: 100%;
+        height: 600px;
     }
 }
 
