--- a/style.css
+++ b/style.css
@@ -142,6 +142,16 @@ h3 {
     border-bottom-style: dashed;
 }
 
+.gridPair {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    padding: 1vh;
+}
+
+.gridPair .gridItem {
+    margin-bottom: 1vh;
+}
+
 .title {
     grid-column-start: 1;
     grid-column-end: 3;
@@ -149,9 +159,6 @@ h3 {
 
 .title p {
     margin-top: 4%;
-}
-
-.headline {
 }
 
 .adSpot {
@@ -176,10 +183,10 @@ h3 {
 }
 
 .contactBox a {
-    background-color: black;
-    color: white;
+    background-color: var(--blue);
+    color: --black;
     text-decoration: none;
-    box-shadow: 5px 5px white;
+    box-shadow: 5px 5px black;
     padding: 0.5em 1em 0.5em 0.5em;
 }
 
@@ -271,10 +278,6 @@ h3 {
 
 /*DEVICE CONTROL*/
 @media (max-width: 768px) {
-    .mainContent {
-        grid-template-columns: 1fr;
-    }
-
     /*ALL*/
     a {
         font-size: 3vw;
@@ -315,16 +318,21 @@ h3 {
     
     .projContainer {
     grid-template-columns: 1fr;
-}
-    
-    .homeInfo {
-        display: grid;
-        grid-template-columns: 1fr;
+    grid-template-rows: auto;
     }
 
     #SummatePDF {
         width: 100%;
         height: 600px;
+    }
+    
+    .container {
+        grid-template-columns: 1fr 1fr;
+    }
+    
+    .adSpot {
+        grid-column-start: 1;
+        grid-column-end: 3;
     }
 }
 
