--- a/style.css
+++ b/style.css
@@ -302,6 +302,10 @@ h3 {
     grid-template-columns: auto;
     justify-content: center;
 }
+
+#clickable {
+    text-decoration: underline;
+}
 /*------------------------------------------------------------------------------------------*/
 
 
